--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Creative & Clean</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    
+    <main>
+        <header>
+            <div class ="titulo">
+                <h1>Creative & Clean</h1>
+                <h3>LUXURY WORKSTATION WITH STYLE.</h3>
+            </div>
+            <button class="boton1">View  →</button>
+        </header>
+        <section class ="seccion1">
+            <div>
+                <h2>MAKE YOUR WORKSTATION FUN WITH ENTERTAINMENT</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus doloribus non consequuntur! Commodi molestiae aperiam fuga et natus nulla quod ipsum dolorem corporis, architecto velit magnam porro dignissimos inventore. Reprehenderit.</p>
+                <button>View  →</button>
+            </div>
+            <div>
+                <img src="./assets/images/img01.png" alt="Escritorio">
+            </div>
+        </section>
+        <section class ="seccion2">
+            <div>
+                <img src="./assets/images/img02.png" alt="Escritorio 2">
+            </div>
+            <div>
+                <h2>WORK ANYWHERE YOU LIKE, ANYWHERE YOU PREFER</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus doloribus non consequuntur! Commodi molestiae aperiam fuga et natus nulla quod ipsum dolorem corporis, architecto velit magnam porro dignissimos inventore. Reprehenderit.</p>
+                <button>View  →</button>
+            </div>
+        </section>
+        <section class ="seccion3">
+            <h2>WORK ANYWHERE YOU LIKE, ANYWHERE YOU PREFER</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus doloribus non consequuntur! Commodi molestiae aperiam fuga et natus nulla quod ipsum dolorem corporis, architecto velit magnam porro dignissimos inventore. Reprehenderit.</p>
+            <button>View  →</button>
+        </section>
+        <footer>
+
+        </footer>
+    </main>
 </body>
 </html>
