--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h1>Creative & Clean</h1>
                 <h3>LUXURY WORKSTATION WITH STYLE.</h3>
             </div>
-            <button class="boton1">View  →</button>
+            <button class="boton">View  →</button>
         </header>
         <section class ="seccion1">
             <div>
@@ -32,16 +32,57 @@
             <div>
                 <h2>WORK ANYWHERE YOU LIKE, ANYWHERE YOU PREFER</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus doloribus non consequuntur! Commodi molestiae aperiam fuga et natus nulla quod ipsum dolorem corporis, architecto velit magnam porro dignissimos inventore. Reprehenderit.</p>
-                <button>View  →</button>
+                <button>View →</button>
             </div>
         </section>
         <section class ="seccion3">
             <h2>WORK ANYWHERE YOU LIKE, ANYWHERE YOU PREFER</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus doloribus non consequuntur! Commodi molestiae aperiam fuga et natus nulla quod ipsum dolorem corporis, architecto velit magnam porro dignissimos inventore. Reprehenderit.</p>
-            <button>View  →</button>
+            <button>Check this out   →</button>
         </section>
         <footer>
-
+            <section>
+                <div>
+                    <a href="#">Address</a>
+                    <ul>
+                        <li><a href="#">Creative & Clean</a></li>
+                        <li><a href="#"></a>Sylhet 3100</li>
+                        <li><a href="#"></a>Dhaka</li>
+                        <li><a href="#"></a>Bangladesh.</li>
+                    </ul>
+                </div>
+                <div>
+                    <a href="#">Product</a>
+                    <ul>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#"></a>Pricing</li>
+                        <li><a href="#"></a>Markeplace</li>
+                        <li><a href="#"></a>Open-Source</li>
+                    </ul>
+                </div>
+                <div>
+                    <a href="#">learn</a>
+                    <ul>
+                        <li><a href="#">Documentation</a></li>
+                        <li><a href="#"></a>Tutorial</li>
+                        <li><a href="#"></a>Blog</li>
+                        <li><a href="#"></a>Resources</li>
+                    </ul>
+                </div>
+                <div>
+                    <a href="#">Pricing</a>
+                    <ul>
+                        <li><a href="#">Basic</a></li>
+                        <li><a href="#"></a>Regular</li>
+                        <li><a href="#"></a>Premium</li>
+                        <li><a href="#"></a>Platinum</li>
+                    </ul>
+                </div>
+            </section>
+            <section>
+                <p>&COPY; </p>
+            </section>
+           
         </footer>
     </main>
 </body>
