--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
                 <h1>Creative & Clean</h1>
                 <h3>LUXURY WORKSTATION WITH STYLE.</h3>
             </div>
-            <button class="boton">View  →</button>
+            <a href="#"><button class="boton">View     
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+                </svg>
+            </button></a>
         </header>
         <section class ="seccion1">
-            <div>
-                <h2>MAKE YOUR WORKSTATION FUN WITH ENTERTAINMENT</h2>
+            <div class="texto">
+                <h2>MAKE YOUR WORKSTATION FUN WITH ENTERTAINMENT.</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus doloribus non consequuntur! Commodi molestiae aperiam fuga et natus nulla quod ipsum dolorem corporis, architecto velit magnam porro dignissimos inventore. Reprehenderit.</p>
-                <button>View  →</button>
+                <a href="#"><button class="boton">View
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8" />
+                    </svg>
+                </button></a>
             </div>
             <div>
                 <img src="./assets/images/img01.png" alt="Escritorio">
@@ -32,13 +40,21 @@
             <div>
                 <h2>WORK ANYWHERE YOU LIKE, ANYWHERE YOU PREFER</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus doloribus non consequuntur! Commodi molestiae aperiam fuga et natus nulla quod ipsum dolorem corporis, architecto velit magnam porro dignissimos inventore. Reprehenderit.</p>
-                <button>View →</button>
+                <a href="#"><button class="boton">View     
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+                    </svg>
+                </button></a>
             </div>
         </section>
         <section class ="seccion3">
             <h2>WORK ANYWHERE YOU LIKE, ANYWHERE YOU PREFER</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus doloribus non consequuntur! Commodi molestiae aperiam fuga et natus nulla quod ipsum dolorem corporis, architecto velit magnam porro dignissimos inventore. Reprehenderit.</p>
-            <button>Check this out   →</button>
+            <a href="#"><button class="boton">Check this out     
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+                </svg>
+            </button></a>
         </section>
         <footer>
             <section>
@@ -80,9 +96,8 @@
                 </div>
             </section>
             <section>
-                <p>&COPY; </p>
+                <p>&COPY; 2017 all rights reserved by Getmiraj@gmail.com</p>
             </section>
-           
         </footer>
     </main>
 </body>
