Desarrollo secciones y footer

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                     </svg>
                 </button></a>
             </div>
-            <div>
+            <div class="imagen">
                 <img src="./assets/images/img01.png" alt="Escritorio">
             </div>
         </section>
         <section class ="seccion2">
-            <div>
+            <div class="imagen2">
                 <img src="./assets/images/img02.png" alt="Escritorio 2">
             </div>
-            <div>
+            <div class="texto2">
                 <h2>WORK ANYWHERE YOU LIKE, ANYWHERE YOU PREFER</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus doloribus non consequuntur! Commodi molestiae aperiam fuga et natus nulla quod ipsum dolorem corporis, architecto velit magnam porro dignissimos inventore. Reprehenderit.</p>
                 <a href="#"><button class="boton">View     
@@ -48,17 +48,19 @@
             </div>
         </section>
         <section class ="seccion3">
-            <h2>WORK ANYWHERE YOU LIKE, ANYWHERE YOU PREFER</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus doloribus non consequuntur! Commodi molestiae aperiam fuga et natus nulla quod ipsum dolorem corporis, architecto velit magnam porro dignissimos inventore. Reprehenderit.</p>
-            <a href="#"><button class="boton">Check this out     
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
-                </svg>
-            </button></a>
+            <div class="texto3">
+                <h2 class="titulo3">SUPPLY OF UNMILITED RESOURCES...</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus doloribus non consequuntur! Commodi molestiae aperiam fuga et natus nulla quod ipsum dolorem corporis, architecto velit magnam porro dignissimos inventore. Reprehenderit. Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <a href="#"><button class="boton">Check this out     
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+                    </svg>
+                </button></a>
+            </div>
         </section>
         <footer>
-            <section>
-                <div>
+            <section class="cont-list">
+                <div class="listas">
                     <a href="#">Address</a>
                     <ul>
                         <li><a href="#">Creative & Clean</a></li>
@@ -67,7 +69,7 @@
                         <li><a href="#"></a>Bangladesh.</li>
                     </ul>
                 </div>
-                <div>
+                <div class="listas">
                     <a href="#">Product</a>
                     <ul>
                         <li><a href="#">Features</a></li>
@@ -76,7 +78,7 @@
                         <li><a href="#"></a>Open-Source</li>
                     </ul>
                 </div>
-                <div>
+                <div class="listas">
                     <a href="#">learn</a>
                     <ul>
                         <li><a href="#">Documentation</a></li>
@@ -85,7 +87,7 @@
                         <li><a href="#"></a>Resources</li>
                     </ul>
                 </div>
-                <div>
+                <div class="listas">
                     <a href="#">Pricing</a>
                     <ul>
                         <li><a href="#">Basic</a></li>
@@ -95,7 +97,7 @@
                     </ul>
                 </div>
             </section>
-            <section>
+            <section class="footer2">
                 <p>&COPY; 2017 all rights reserved by Getmiraj@gmail.com</p>
             </section>
         </footer>
